--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -28,16 +28,16 @@ tools:showIn="navigation_view"
         >
         <item
             android:id="@+id/my_requests"
-            android:icon="@drawable/ic_pet"
+            android:icon="@drawable/ic_requests"
             android:title="My Requests" />
         <item
             android:id="@+id/add_request"
-            android:icon="@drawable/ic_mypets"
+            android:icon="@drawable/ic_addpet"
             android:title="Add adoption request"
             />
         <item
             android:id="@+id/recieved_request"
-            android:icon="@drawable/ic_addpet"
+            android:icon="@drawable/ic_received"
             android:title="Recieved requests" />
     </group>
 
@@ -47,6 +47,11 @@ tools:showIn="navigation_view"
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_profile"
             android:title="Profile" />
+
+        <item
+            android:id="@+id/nav_position"
+            android:icon="@drawable/ic_location"
+            android:title="My position" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
