--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/montserrat"
         android:text="Make a New Friend  ! "
-        android:textColor="@color/black"
+        android:textColor="@color/purple_500"
         android:textSize="25sp"
         android:textStyle="bold" />
     <TextView
@@ -36,7 +36,7 @@
         android:layout_marginTop="2dp"
         android:fontFamily="@font/montserrat"
         android:text="Adopt a Pet today "
-        android:textColor="@color/black"
+        android:textColor="@color/purple_500"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -77,7 +77,7 @@
         android:fontFamily="@font/montserrat"
         android:text="Login"
         android:textAllCaps="false"
-        android:textColor="@android:color/black"
+        android:textColor="@android:color/white"
         android:textSize="18dp" />
 
     <LinearLayout
@@ -104,7 +104,7 @@
             android:fontFamily="@font/montserrat"
             android:layout_marginLeft="20dp"
             android:text="Register"
-            android:textColor="@color/black"
+            android:textColor="@color/purple_500"
             android:textStyle="bold"
             android:textSize="14sp"/>
 
@@ -133,7 +133,7 @@
             android:fontFamily="@font/montserrat"
             android:text="Reset Password"
             android:layout_marginLeft="20dp"
-            android:textColor="@color/black"
+            android:textColor="@color/purple_500"
             android:textSize="14sp"
             android:textStyle="bold" />
     </LinearLayout>
