--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -27,7 +27,7 @@
             android:layout_marginTop="40dp"
             android:fontFamily="@font/montserrat"
             android:text="Create NEW Account"
-            android:textColor="@color/black"
+            android:textColor="@color/purple_500"
             android:textSize="18sp"
             android:textStyle="bold" />
         <EditText
@@ -89,7 +89,7 @@
             android:fontFamily="@font/montserrat"
             android:text="Create account"
             android:textAllCaps="false"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="18dp" />
         <LinearLayout
             android:layout_width="wrap_content"
