--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
         android:id="@+id/app_settings"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/purple_200">
+        android:background="@color/white">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_settings"
