--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,15 +5,15 @@
     <color name="button2_color">#706200</color>
     <color name="selectedbtn">#EF6343</color>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#1C3381</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="theme_light">#FF009EFD</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#FFAA7B</color>
-    <color name="colorPrimaryDark">#DD6043</color>
+    <color name="colorPrimary">#1C3381</color>
+    <color name="colorPrimaryDark">#FF009EFD</color>
     <color name="colorAccent">#5B9635</color>
     <color name="Black">#F000</color>
 
