--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/fragment_container">
+
+
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -8,6 +14,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/white">
 
 
@@ -27,18 +34,16 @@
                 android:layout_height="match_parent">
 
 
-                <TextView
+                <Button
                     android:id="@+id/close_settings_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:fontFamily="@font/montserrat"
-                    android:text="Close"
+                    android:textOn="Close"
+                    android:textOff="Close"
                     android:textColor="@android:color/black"
                     android:textSize="17sp"
-
                     android:textStyle="bold" />
+
                 <TextView
                     android:id="@+id/delete_user_btn"
                     android:layout_width="wrap_content"
@@ -161,3 +166,4 @@
         android:textSize="18dp" />
 </RelativeLayout>
 </ScrollView>
+</FrameLayout>
